--- a/wwr/index.html
+++ b/wwr/index.html
@@ -54,7 +54,7 @@
         </section>
     </main>
     <footer>
-        <p>Cimn Creation & copy; 2023 - Jacob ka shing CHAN</p>
+        <p>Cimn Creation @ 2023 - Jacob ka shing CHAN</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
