--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 Home Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>All About Me</title>
 </head>
 <body>
-    <h1>Welcome to WDD130 Web Projects</h1>
-<nav>
-  <a href="aboutme/index.html">About Me Page</a>             
-  <a href="wwr/index.html">White Water Rafting Website</a>
-  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-  <a href="positioning.html">Positioning Activity</a>
-  <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan</a>
-</nav>
+  <h1>About Me</h1>
+  <img src="images/me2.jpg" alt="My image" width="300">
+  <h2>CHAN Ka Shing</h2>
+  <h2>Jacob CHAN</h2>
+  <p>Hello everyone. My name is Jacob. I am from Hong Kong. I have a little happy family. I got married in 2009.
+    I have one daughter. I have been a member of the church since I was born.</p>
+  <p>I went on my mission in Hong Kong. I grew and learn a lot from mission.</p>
+  <p>I love hiking and camping. I am excited to learn iT. I hope that I can enter into information technology industry career one day.</p>
 </body>
 </html>
-Footer
-© 2023 GitHub, Inc.
-Footer navigation
