--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting | Cimn Creation | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo4.jpg" alt="Cimn Creation" width="400">
@@ -43,9 +45,10 @@
         </section>
         <section class="rapids-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat" width="400">
-            <img class="icon" src="images/oars.png" alt="cimn icon" width="70">
+            <img class="icon" src="images/oars.png" alt="oars icon" width="70">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains" width="800">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -69,5 +72,6 @@
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
