added w07 pre-assignemnt

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,8 +20,8 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <div>
-        <div>
+    <div id="hero">
+        <div id="hero-box">
             <img id="hero-img" src="images/hero.jpg" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
