--- a/jacuancum/site-plan.html
+++ b/jacuancum/site-plan.html
@@ -49,7 +49,7 @@
 
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr><td class="primary">[#003049]</td><td class="secondary">[#d62828]</td><td class="accent1">[#f77f00]</td><td class="accent2">[#fcbf49]</td><td class="accent3">[#eae2b7]</td></tr>
       </table>
