--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -129,7 +129,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-
+    <img src="images/rafting_site_page_2(3).JPG" alt="page 2 wireframe">
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
