added w08 content and images

--- a/jacuancum/site-plan.html
+++ b/jacuancum/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">About me</a>
+        <a href="#">Hobbies</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          About me  <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Hobbies  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,58 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Who is Jacob?
+        Jacob CHAN is a BYU Pathway student. He is studying Apply Information Technology bachelor's degree.
+
+        Personal Info
+        Hong Konger
+        +852 61752240
+        cks2306@gmail.com
+
+        My Expertise
+        7 years aviation industry experience
+        7 years accounting officer experience
+        10 years camping experience
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/climbing image - adobe stock.jpg" alt="climbing background image- adobe stock">
+        <img src="images/me3 - Copy.jpg" alt="my image">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        About
+        I joined the aviation industry and thought that I could work in this industry until I retired. However, the world environment changed and the company laid off employees.  For the sake of my family, I looked around for different jobs.
+        I found this great opportunity available in Hong Kong in 2022. Since the protests activities and the epidemic spread in Hong Kong and China, the uncertainty social condition rises the unemployment and business closures.
+        I am sincerely grateful for this opportunity to study and fulfill his dream of a university degree that I never achieved.
+
+        Education
+        Apply Information Technology | BYU-Idaho
+
+        Achievements
+        Two years volunteer missionary service in Hong Kong
+        These two years were the most special time in my life, I became a new person, a better person and a person who knew Jesus Christ better.  These valuable experiences changed my life afterwards.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/volunteer cleaning beach - freepik.jpg" alt="volunteer cleaning beach image - freepik">
+        <img src="images/teamwork hand - freepik.avif" alt="teamwork hand image - freepik">
+        <img src="images/voluntary  - freepik.avif" alt="volunteer image - freepik">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Camping 
+        Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children can explore nature and have many new attempts, which are lacking in urban life.
+
+        Handmade camping table
+        Handmade camping table, since I fell in love with camping, I tried to make some gadgets by hand, because the props I have made by myself I can feel more warm than things bought with money.
+        One time, a friend saw my camping table I made by myself and suggested me I can sell it online. Luckily, I received a lot of inquiries. Since then, I have been producing a small amount of handmade camping table for sell.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/camping staff - adobe stock.jpg" alt="camping staff image - adobe stock">
+        <img src="images/camping night - adobe stock.jpg" alt="camping night image - adobe stock">
 
       </ul>
       <hr>
