--- a/jacuancum/site-plan.html
+++ b/jacuancum/site-plan.html
@@ -190,19 +190,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/personal_site_home.JPG" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>[Page 2] About Me</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/personal_site_page2.JPG" alt="page 2 About Me wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>[Page 3] Hobbies</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/personal_site_page3.JPG" alt="page 3 Hobbies wireframe">
     </main>
   </body>
 
