added w09 subpage images

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,8 +15,8 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="side-plan-rafting.html">Site Plan</a>
+            <a href="rivers.html">Rivers</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
@@ -62,13 +62,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="images/facebook_icon.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="images/twitter_icon.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.jpeg" alt="instagram icon">
+                <img src="images/instsgrsm_icon.png" alt="instagram icon">
             </a>
         </div>
     </footer>
