--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -28,6 +28,8 @@
             <p>
                 We are honor to give you information about what trips are available, when trips are available, and how much they cost.
             </p>
+            <h2>E-mail :</h2>
+            <p>wwr_info@123lds.com</p>
             <h2>Address :</h2>
             <p>123 Latter Day Saint Street,
                 Be Grateful, LDS45 67CKS
