--- a/jacuancum/personal-site.html
+++ b/jacuancum/personal-site.html
@@ -33,10 +33,24 @@
                 <img id="hero-img" src="images/climbing image - adobe stock.jpg" alt="People enjoying white water rafting">
             </div>
             <div id="hero">
-                <section id="hero-msg">
-                    <h1>Who is Jacob?</h1>
-                    <h1>Welcome to Jacob's personal website</h1>
-                </section>
+                <div id="hero-msg">
+                    <h1>Jacob CHAN</h1>
+                    <h2>Welcome to my personal website</h2>
+                </div>
+                <div id="myphto-box">
+                    <img id="myphoto" src="images/me3 - Copy.jpg" alt="my portrait">
+                </div>
+            </div>
+            <div class="topics">
+                <div>
+                    <h2>About Me</h2>
+                </div>
+                <div>
+                    <h2>Expertise</h2>
+                </div>
+                <div>
+                    <h2>Hobbies</h2>
+                </div>
             </div>
         </main>
 
