--- a/wwr/contactus2.html
+++ b/wwr/contactus2.html
@@ -17,7 +17,7 @@
             <a href="index.html">Home</a>
             <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="contactus2.html">Contact Us</a>
         </nav>
     </header>
     
@@ -71,11 +71,11 @@
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message"></textarea>
               </li>
+              <li class="button">
+                <button type="submit">Send your message</button>
+              </li>
             </ul>
         </form>
-            <li class="button">
-                <button type="submit">Send your message</button>
-            </li>
     </main>
     
     <footer>
