w10 personal site html

--- a/jacuancum/site-plan.html
+++ b/jacuancum/site-plan.html
@@ -146,7 +146,7 @@
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        About
+        About Me
         I joined the aviation industry and thought that I could work in this industry until I retired. However, the world environment changed and the company laid off employees.  For the sake of my family, I looked around for different jobs.
         I found this great opportunity available in Hong Kong in 2022. Since the protests activities and the epidemic spread in Hong Kong and China, the uncertainty social condition rises the unemployment and business closures.
         I am sincerely grateful for this opportunity to study and fulfill his dream of a university degree that I never achieved.
