--- a/jacuancum/site-plan.html
+++ b/jacuancum/site-plan.html
@@ -167,7 +167,7 @@
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        Camping 
+        Hobbies
         Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children can explore nature and have many new attempts, which are lacking in urban life.
 
         Handmade camping table
