--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -10,9 +10,13 @@
 <body>
     <div>
         <header>
-            <a href="personal-site.html">
+            <a href="index.html">
                 <img class="logo" src="images/Jacuancum-logos.jpeg" alt="Jacob CHAN">
-                <nav>
+            </a>
+            <a href="index.html">Home</a>
+            <a href="aboutme.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
+            <nav>
                 <div class="social">
                     <a href="https://outlook.com" target="_blank">
                         <img src="images/email_icon.png" alt="email icon">
@@ -24,8 +28,7 @@
                         <img src="images/whatsapp_icon.png" alt="whatsapp icon">
                     </a>
                 </div>
-                </nav>
-            </a>    
+            </nav>
         </header>
 
         <main>
@@ -48,6 +51,9 @@
         </main>
 
         <footer>
+            <a href="index.html">Home</a>
+            <a href="aboutme.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
             <p>Cimn Creation @ 2023 - Jacob ka shing CHAN</p>
         </footer>
     </div>
