--- a/jacuancum/hobbies.html
+++ b/jacuancum/hobbies.html
@@ -10,9 +10,13 @@
 <body>
     <div>
         <header>
-            <a href="personal-site.html">
+            <a href="index.html">
                 <img class="logo" src="images/Jacuancum-logos.jpeg" alt="Jacob CHAN">
-                <nav>
+            </a>
+            <a href="index.html">Home</a>
+            <a href="aboutme.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
+            <nav>
                 <div class="social">
                     <a href="https://outlook.com" target="_blank">
                         <img src="images/email_icon.png" alt="email icon">
@@ -24,13 +28,13 @@
                         <img src="images/whatsapp_icon.png" alt="whatsapp icon">
                     </a>
                 </div>
-                </nav>
-            </a>    
+            </nav>
         </header>
 
         <main>
             <img src="images/camping staff - adobe stock.jpg" alt="camping stuffs">
             <img src="images/camping night - adobe stock.jpg" alt="camping night">
+            <p>Hobbies</p>
             <p>
                 Camping 
                 Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children can explore nature and have many new attempts, which are lacking in urban life.
@@ -43,6 +47,9 @@
         </main>
 
         <footer>
+            <a href="index.html">Home</a>
+            <a href="aboutme.html">About Me</a>
+            <a href="hobbies.html">Hobbies</a>
             <p>Cimn Creation @ 2023 - Jacob ka shing CHAN</p>
         </footer>
     </div>
