--- a/jacuancum/index.html
+++ b/jacuancum/index.html
@@ -17,6 +17,7 @@
             <a href="aboutme.html">About Me</a>
             <a href="hobbies.html">Hobbies</a>
             <nav>
+                Contact Me - 
                 <div class="social">
                     <a href="https://outlook.com" target="_blank">
                         <img src="images/email_icon.png" alt="email icon">
