--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -54,6 +54,7 @@
             <a href="index.html">Home</a>
             <a href="aboutme.html">About Me</a>
             <a href="hobbies.html">Hobbies</a>
+            <a href="site-plan.html">Site plan</a>
             <p>Cimn Creation @ 2023 - Jacob ka shing CHAN</p>
         </footer>
     </div>
