--- a/jacuancum/index.html
+++ b/jacuancum/index.html
@@ -43,27 +43,29 @@
                 </div>
                 <div id="myphoto-box">
                     <img id="myphoto" src="images/me3 - Copy.jpg" alt="my portrait">
+                <section class="personalinfo">    
                     <p>Personal Info</p>
                     <p>Hong Konger</p>
                     <p>+852 61752240</p>
                     <p>cks2306@gmail.com</p>
+                </section>
                 </div>
             </div>
             <div class="topics">
                 <div>
-                    <a href="aboutme.html">About Me</a>
-                    <p class="infop">I joined the aviation industry and thought that I could work in this industry until I retired. However...</p>
+                    <a class="the3topics" href="aboutme.html">About Me</a>
+                    <p class="info1">I joined the aviation industry and thought that I could work in this industry until I retired. However...</p>
                 </div>
                 <div>
-                    <a>Expertise</a>
-                    <p class="infop">
+                    <a class="the3topics">Expertise</a>
+                    <p class="info2">
                     7 years aviation industry experience.
                     7 years accounting officer experience.
                     10 years camping experience.</p>
                 </div>
                 <div>
-                    <a href="hobbies.html">Hobbies</a>
-                    <p class="infop">Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children...                </p>
+                    <a class="the3topics" href="hobbies.html">Hobbies</a>
+                    <p class="info3">Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children...                </p>
                 </div>
             </div>
         </main>
