--- a/jacuancum/index.html
+++ b/jacuancum/index.html
@@ -54,7 +54,11 @@
             <div class="topics">
                 <div>
                     <a class="the3topics" href="aboutme.html">About Me</a>
-                    <p class="info1">I joined the aviation industry and thought that I could work in this industry until I retired. However...</p>
+                    <p class="info1">
+                        I joined the aviation industry and thought that
+                         I could work in this industry until I retired. 
+                         However...</p>
+                    <a class="little-readmore" href="aboutme.html">read more</a>
                 </div>
                 <div>
                     <a class="the3topics">Expertise</a>
@@ -65,7 +69,11 @@
                 </div>
                 <div>
                     <a class="the3topics" href="hobbies.html">Hobbies</a>
-                    <p class="info3">Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children...                </p>
+                    <p class="info3">
+                        Camping is a healthy activity, especially when 
+                        you have children. Outdoor camping can bring many 
+                        benefits. Children...</p>
+                    <a class="little-readmore" href="hobbies.html">read more</a>
                 </div>
             </div>
         </main>
