--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -32,7 +32,8 @@
         </header>
 
         <main>
-            <img src="images/volunteer cleaning beach - freepik.jpg" alt="volunteer cleaning the beach">
+            <img src="images/groundstaff1.webp" alt="airport ground staff">
+            <img src="images/Pathwayoffice.jpg" alt="BYU pathway office">
             <img src="images/teamwork hand - freepik.avif" alt="team work">
             <img src="images/voluntary  - freepik.avif" alt="voluntary">
             <p>About Me</p>
