--- a/jacuancum/hobbies.html
+++ b/jacuancum/hobbies.html
@@ -13,10 +13,11 @@
             <a href="index.html">
                 <img class="logo" src="images/Jacuancum-logos.jpeg" alt="Jacob CHAN">
             </a>
-            <a href="index.html">Home</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="hobbies.html">Hobbies</a>
+            <a class="button" href="index.html">Home</a>
+            <a class="button" href="aboutme.html">About Me</a>
+            <a class="button" href="hobbies.html">Hobbies</a>
             <nav>
+                Contact Me - 
                 <div class="social">
                     <a href="https://outlook.com" target="_blank">
                         <img src="images/email_icon.png" alt="email icon">
@@ -49,10 +50,10 @@
         </main>
 
         <footer>
-            <a href="index.html">Home</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="hobbies.html">Hobbies</a>
-            <a href="site-plan.html">Site plan</a>
+            <a class="footer-button" href="index.html">Home</a>
+            <a class="footer-button" href="aboutme.html">About Me</a>
+            <a class="footer-button" href="hobbies.html">Hobbies</a>
+            <a class="footer-button" href="site-plan.html">Site plan</a>
             <p>Cimn Creation @ 2023 - Jacob ka shing CHAN</p>
         </footer>
     </div>
