--- a/jacuancum/index.html
+++ b/jacuancum/index.html
@@ -13,9 +13,9 @@
             <a href="index.html">
                 <img class="logo" src="images/Jacuancum-logos.jpeg" alt="Jacob CHAN">
             </a>
-            <a href="index.html">Home</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="hobbies.html">Hobbies</a>
+            <a class="button" href="index.html">Home</a>
+            <a class="button" href="aboutme.html">About Me</a>
+            <a class="button" href="hobbies.html">Hobbies</a>
             <nav>
                 Contact Me - 
                 <div class="social">
@@ -79,10 +79,10 @@
         </main>
 
         <footer>
-            <a href="index.html">Home</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="hobbies.html">Hobbies</a>
-            <a href="site-plan.html">Site plan</a>
+            <a class="footer-button" href="index.html">Home</a>
+            <a class="footer-button" href="aboutme.html">About Me</a>
+            <a class="footer-button" href="hobbies.html">Hobbies</a>
+            <a class="footer-button" href="site-plan.html">Site plan</a>
             <p>Cimn Creation @ 2023 - Jacob ka shing CHAN</p>
         </footer>
     </div>
