--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -32,13 +32,22 @@
             </nav>
         </header>
 
-        <main>
-            <img src="images/groundstaff1.webp" alt="airport ground staff">
-            <img src="images/Pathwayoffice.jpg" alt="BYU pathway office">
-            <img src="images/teamwork hand - freepik.avif" alt="team work">
-            <img src="images/voluntary  - freepik.avif" alt="voluntary">
-            <p>About Me</p>
-            <p>
+        <main id="aboutme-grid">
+            <section>
+                <img id="aboutme-image1" src="images/groundstaff1.webp" alt="airport ground staff">
+            </section>
+            <section>
+                <img id="aboutme-image2" src="images/Pathwayoffice.jpg" alt="BYU pathway office">
+            </section>
+            <section>
+                <img id="aboutme-image3" src="images/teamwork-hand-freepik.avif" alt="team work">
+            </section>
+            <section>
+                <img id="aboutme-image4" src="images/voluntary-freepik.avif" alt="voluntary">
+            </section>
+            <section id="aboutme-p">
+                <p>About Me</p>
+                <p>
                 I joined the aviation industry and thought that I could work in this industry until I retired. However, the world environment changed and the company laid off employees.  For the sake of my family, I looked around for different jobs.
                 I found this great opportunity available in Hong Kong in 2022. Since the protests activities and the epidemic spread in Hong Kong and China, the uncertainty social condition rises the unemployment and business closures.
                 I am sincerely grateful for this opportunity to study and fulfill his dream of a university degree that I never achieved.
@@ -49,7 +58,8 @@
                 Achievements
                 Two years volunteer missionary service in Hong Kong
                 These two years were the most special time in my life, I became a new person, a better person and a person who knew Jesus Christ better.  These valuable experiences changed my life afterwards.
-            </p>
+                </p>
+            </section>
         </main>
 
         <footer>
