--- a/jacuancum/hobbies.html
+++ b/jacuancum/hobbies.html
@@ -33,8 +33,8 @@
         </header>
 
         <main>
-            <img src="images/camping staff - adobe stock.jpg" alt="camping stuffs">
-            <img src="images/camping night - adobe stock.jpg" alt="camping night">
+            <img src="images/camping-staff-adobe-stock.jpg" alt="camping stuffs">
+            <img src="images/camping-night-adobe-stock.jpg" alt="camping night">
             <img src="images/selfmadetable1.jpg" alt="hand made table">
             <img src="images/selfmadetable2.jpg" alt="hand made table">
             <p>Hobbies</p>
