--- a/jacuancum/index.html
+++ b/jacuancum/index.html
@@ -34,7 +34,7 @@
 
         <main>
             <div>
-                <img id="hero-img" src="images/climbing image - adobe stock.jpg" alt="People enjoying white water rafting">
+                <img id="hero-img" src="images/climbing-image-adobe-stock.jpg" alt="People enjoying white water rafting">
             </div>
             <div id="hero">
                 <div id="hero-msg">
@@ -42,7 +42,7 @@
                     <h2>Welcome to my personal website</h2>
                 </div>
                 <div id="myphoto-box">
-                    <img id="myphoto" src="images/me3 - Copy.jpg" alt="my portrait">
+                    <img id="myphoto" src="images/me3-Copy.jpg" alt="my portrait">
                 <section class="personalinfo">    
                     <p>Personal Info</p>
                     <p>Hong Konger</p>
