--- a/jacuancum/site-plan.html
+++ b/jacuancum/site-plan.html
@@ -140,8 +140,8 @@
 
       </p>
       <p>Images for the Home page</p>
-        <img src="images/climbing image - adobe stock.jpg" alt="climbing background image- adobe stock">
-        <img src="images/me3 - Copy.jpg" alt="my image">
+        <img src="images/climbing-image-adobe-stock.jpg" alt="climbing background image- adobe stock">
+        <img src="images/me3-Copy.jpg" alt="my image">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -160,9 +160,9 @@
 
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/volunteer cleaning beach - freepik.jpg" alt="volunteer cleaning beach image - freepik">
-        <img src="images/teamwork hand - freepik.avif" alt="teamwork hand image - freepik">
-        <img src="images/voluntary  - freepik.avif" alt="volunteer image - freepik">
+        <img src="images/volunteer-cleaning-beach-freepik.jpg" alt="volunteer cleaning beach image - freepik">
+        <img src="images/teamwork-hand-freepik.avif" alt="teamwork hand image - freepik">
+        <img src="images/voluntary-freepik.avif" alt="volunteer image - freepik">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -175,8 +175,8 @@
         One time, a friend saw my camping table I made by myself and suggested me I can sell it online. Luckily, I received a lot of inquiries. Since then, I have been producing a small amount of handmade camping table for sell.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/camping staff - adobe stock.jpg" alt="camping staff image - adobe stock">
-        <img src="images/camping night - adobe stock.jpg" alt="camping night image - adobe stock">
+        <img src="images/camping-staff-adobe-stock.jpg" alt="camping staff image - adobe stock">
+        <img src="images/camping-night-adobe-stock.jpg" alt="camping night image - adobe stock">
 
       </ul>
       <hr>
