w12 components and w11 corrections

--- a/jacuancum/index.html
+++ b/jacuancum/index.html
@@ -34,7 +34,7 @@
 
         <main>
             <div>
-                <img id="hero-img" src="images/climbing-image-adobe-stock.jpg" alt="People enjoying white water rafting">
+                <img id="hero-img" src="images/amazing-sky-dawn.jpg" alt="People enjoying white water rafting">
             </div>
             <div id="hero">
                 <div id="hero-msg">
