--- a/jacuancum/hobbies.html
+++ b/jacuancum/hobbies.html
@@ -32,21 +32,31 @@
             </nav>
         </header>
 
-        <main>
-            <img src="images/camping-staff-adobe-stock.jpg" alt="camping stuffs">
-            <img src="images/camping-night-adobe-stock.jpg" alt="camping night">
-            <img src="images/selfmadetable1.jpg" alt="hand made table">
-            <img src="images/selfmadetable2.jpg" alt="hand made table">
-            <p>Hobbies</p>
-            <p>
+        <main class="hobbies-grid">
+            <section class="campingblock1">
+                <img id="campingimage1" class="hobbiesimages" src="images/camping-staff-adobe-stock.jpg" alt="camping stuffs">
+            </section>
+            <section class="campingblock2">
+                <img id="campingimage2" class="hobbiesimages" src="images/camping-night-adobe-stock.jpg" alt="camping night">
+            </section>
+            <section class="handcraftblock1">
+                <img class="hobbiesimages" src="images/selfmadetable1.jpg" alt="hand made table">
+            </section>
+            <section class="handcraftblock2">
+                <img class="hobbiesimages" src="images/selfmadetable2.jpg" alt="hand made table">
+            </section>
+
+            <section class="hobbiesp">
+                <h2>Hobbies</h2>
+                <p>
                 Camping 
                 Camping is a healthy activity, especially when you have children. Outdoor camping can bring many benefits. Children can explore nature and have many new attempts, which are lacking in urban life.
         
                 Handmade camping table
                 Handmade camping table, since I fell in love with camping, I tried to make some gadgets by hand, because the props I have made by myself I can feel more warm than things bought with money.
                 One time, a friend saw my camping table I made by myself and suggested me I can sell it online. Luckily, I received a lot of inquiries. Since then, I have been producing a small amount of handmade camping table for sell.
-            </p>
-        
+                </p>
+            </section>
         </main>
 
         <footer>
