--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -33,28 +33,31 @@
         </header>
 
         <main id="aboutme-grid">
-            <section>
+            <section class="aboutmeblock1">
                 <img id="aboutme-image1" src="images/groundstaff1.webp" alt="airport ground staff">
             </section>
-            <section>
+            <section class="aboutmeblock2">
                 <img id="aboutme-image2" src="images/Pathwayoffice.jpg" alt="BYU pathway office">
             </section>
-            <section>
-                <img id="aboutme-image3" src="images/teamwork-hand-freepik.avif" alt="team work">
-            </section>
-            <section>
+            <section class="aboutmeblock3">
                 <img id="aboutme-image4" src="images/voluntary-freepik.avif" alt="voluntary">
             </section>
             <section id="aboutme-p">
-                <p>About Me</p>
+                <h2>About Me</h2>
                 <p>
                 I joined the aviation industry and thought that I could work in this industry until I retired. However, the world environment changed and the company laid off employees.  For the sake of my family, I looked around for different jobs.
                 I found this great opportunity available in Hong Kong in 2022. Since the protests activities and the epidemic spread in Hong Kong and China, the uncertainty social condition rises the unemployment and business closures.
                 I am sincerely grateful for this opportunity to study and fulfill his dream of a university degree that I never achieved.
-        
+                </p>
+            </section>
+            <section class="aboutmep2">
+                <p>
                 Education
                 Apply Information Technology | BYU-Idaho
-        
+                </p>
+            </section>
+            <section class="aboutmep3">
+                <p>
                 Achievements
                 Two years volunteer missionary service in Hong Kong
                 These two years were the most special time in my life, I became a new person, a better person and a person who knew Jesus Christ better.  These valuable experiences changed my life afterwards.
