--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -42,18 +42,25 @@
             <section class="aboutmeblock3">
                 <img id="aboutme-image4" src="images/voluntary-freepik.avif" alt="voluntary">
             </section>
-            <section id="aboutme-p">
+            <section class="aboutmep">
                 <h2>About Me</h2>
                 <p>
-                I joined the aviation industry and thought that I could work in this industry until I retired. However, the world environment changed and the company laid off employees.  For the sake of my family, I looked around for different jobs.
-                I found this great opportunity available in Hong Kong in 2022. Since the protests activities and the epidemic spread in Hong Kong and China, the uncertainty social condition rises the unemployment and business closures.
-                I am sincerely grateful for this opportunity to study and fulfill his dream of a university degree that I never achieved.
+                I joined the aviation industry and thought that I could work in this industry until I retired.
+                However, the world environment changed and the company laid off employees.
+                For the sake of my family, I looked around for different jobs.
+                Since the protests activities and the epidemic spread in Hong Kong and China,
+                the uncertainty social condition rises the unemployment and business closures.
                 </p>
             </section>
             <section class="aboutmep2">
                 <p>
                 Education
                 Apply Information Technology | BYU-Idaho
+                </p>
+                <p>
+                I found this great opportunity available in Hong Kong in 2022.
+                I am sincerely grateful for this opportunity to study and
+                fulfill my dream of a university degree that I never achieved.
                 </p>
             </section>
             <section class="aboutmep3">
