--- a/jacuancum/aboutme.html
+++ b/jacuancum/aboutme.html
@@ -32,7 +32,7 @@
             </nav>
         </header>
 
-        <main id="aboutme-grid">
+        <main class="aboutme-grid">
             <section class="aboutmeblock1">
                 <img id="aboutme-image1" src="images/groundstaff1.webp" alt="airport ground staff">
             </section>
